--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -26,7 +26,7 @@
 }
 
 .hero-bg {
-  background-image: url(../images/hero-bg.jpg);
+  background-image: url(./images/hero-bg.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
