--- a/src/components/LatestNews/LatestNews.css
+++ b/src/components/LatestNews/LatestNews.css
@@ -10,6 +10,7 @@
   }
   
   .card img {
+    width: 100% !important;
     transition: opacity 0.3s ease;
   }
   
@@ -64,8 +65,8 @@
     width: 30.333333%;
   }
   
-  .images-main-section {
-    margin: 0px 36px 0px 36px;
+  .image-main-section {
+    margin: 0px 36px 0px 36px !;
   }
   
   .text-muted {
