--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -3,14 +3,12 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
   }
-  
+ 
   .product-card img {
     width: 100%;
     height: 255px;
     object-fit: contain;
   }
-  
- 
   .product-list-section {
     padding: 50px 0;
     background-color: #f9f9f9;
@@ -55,16 +53,16 @@
   }
   .product-card {
     height: 498px;
-    margin-bottom: 20px; /* Adjust the bottom margin */
+    margin-bottom: 20px;  
   }
   
   .container {
-    padding: 0; /* Check the container padding */
-    margin: 0 auto; /* Ensure margin is centered */
+    padding: 0;  
+    margin: 0 auto;  
   }
   
   .row {
-    margin: 0; /* Remove extra margin if any */
+    margin: 0;  
   }
     -body{
     margin-top: 30px;
@@ -72,3 +70,4 @@
   .card{
     border: none;
   }
+  
